<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_text"

        >
        <TextView
            android:id="@+id/edtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            />

    </RelativeLayout>

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mc"
                android:textColor="#ffffff"
                android:background="@drawable/vien_btn"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mr"
                android:textColor="#ffffff"
                android:background="@drawable/vien_btn"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/MS"
                android:textColor="#ffffff"
                android:background="@drawable/vien_btn"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/M"
                android:textColor="#ffffff"
                android:background="@drawable/vien_btn"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/MM"
                android:textColor="#ffffff"
                android:background="@drawable/vien_btn"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:textColor="#ffffff"
                android:background="@drawable/vien_btn"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ce"
                android:textColor="#ffffff"
                android:background="@drawable/vien_btn"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/c"
                android:textColor="#ffffff"
                android:background="@drawable/vien_btn"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/congtru"
                android:background="@drawable/vien_btn"
                android:textColor="#ffffff"/>



            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/can"
                android:textColor="#ffffff"
                android:background="@drawable/vien_btn"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text7"
                android:background="@drawable/vien_btn"
                android:textColor="#ffffff"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text8"
                android:background="@drawable/vien_btn"
                android:textColor="#ffffff"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text9"
                android:background="@drawable/vien_btn"
                android:textColor="#ffffff"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/chia"
                android:background="@drawable/vien_btn"
                android:textColor="#ffffff"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phantram"
                android:background="@drawable/vien_btn"
                android:textColor="#ffffff"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text4"
                android:background="@drawable/vien_btn"
                android:textColor="#ffffff"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text5"
                android:background="@drawable/vien_btn"
                android:textColor="#ffffff"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/vien_btn"
                android:text="@string/text6"
                android:textColor="#ffffff"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nhan"
                android:background="@drawable/vien_btn"
                android:textColor="#ffffff"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/x"
                android:background="@drawable/vien_btn"
                android:textColor="#ffffff"/>


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10"

        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text1"
                    android:background="@drawable/vien_btn"
                    android:textColor="#ffffff"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/vien_btn"
                    android:text="@string/text2"
                    android:textColor="#ffffff"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/vien_btn"
                    android:text="@string/text3"
                    android:textColor="#ffffff"
                    />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/truu"
                    android:background="@drawable/vien_btn"
                    android:textColor="#ffffff"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/vien_btn"
                    android:text="@string/text0"
                    android:textColor="#ffffff"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    >




                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/vien_btn"
                    android:text="@string/phay"
                    android:textColor="#ffffff"/>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/vien_btn"
                    android:text="@string/cong"
                    android:textColor="#ffffff"/>
                </LinearLayout>


            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="8"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/bang"
                android:background="@drawable/vien_btn"
                android:textColor="#ffffff"
                />

        </LinearLayout>


    </LinearLayout>


    </LinearLayout>





